--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -4,38 +4,10 @@ html(lang='en')
     style
       include ../../css/main.css
     script(type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
-    script(type='text/javascript').
-      $(document).ready(function(){
-        var alFlag = true
-        var psFlag = true
-        $("#al_main").click(function() { 
-          alFlag = !alFlag
-          if(alFlag) $("#algo").animate({
-          width:"toggle"
-        })
-        //- .css("display", "inline-block")
-          else $("#algo").animate({
-          width:"toggle"
-        })
-            //- .css("display", "none")
-        })
-        $("#ps_main").click(function() {
-          psFlag = !psFlag 
-          if(psFlag) $("#ps").css("display", "inline-block")
-          else $("#ps").css("display", "none")
-          })
-      })
+
   body
-    #page
-      h1 WELCOME TO CORDERS
-      #page_list
-        ul
-          li
-            a#al_main(href="#" ) Algorithm
-          li
-            a#ps_main(href="#") Problem Solving
+    #main_page
+      include top.pug
       #content
-        #algo
           include algorithm.pug
-        #ps
           include ps.pug
