--- a/src/views/ps.pug
+++ b/src/views/ps.pug
@@ -1,36 +1,39 @@
 doctype html
 html(lang='en')
   head
+    style
+      include ../../css/ps.css
     script(type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
   body
-    h1 문제1
-    p
-      select#language(name='language')
-        option(name='1') C
-        option(name='2') C++
-        option(name='3') Java
-    textarea#code(style='resize:none; width:400px; height:300px;' name='code')
-    p
-    input#output(type='text' name='output' style='resize:none; width:400px; height:50px;' readonly='readonly')
-    p
-    input#ajax_post(type = 'button' value='제출하기' class='ajaxsend')
-    p
-    script.
-      document.querySelector('.ajaxsend').addEventListener('click',function(){
-        sendAjax('http://localhost:3000/form_receive',code.value);
-      })
-      function sendAjax(url,data,language){
-        var data = {'code': data};
-        data = JSON.stringify(data);
-        var xhr = new XMLHttpRequest();
-      xhr.open('POST',url,true);
-          xhr.setRequestHeader('Content-type','application/json');
-          xhr.send(data);
+    #ps_page
+      h1 문제1
+      p
+        select#language(name='language')
+          option(name='1') C
+          option(name='2') C++
+          option(name='3') Java
+      textarea#code(style='resize:none; width:400px; height:300px;' name='code')
+      p
+      input#output(type='text' name='output' style='resize:none; width:400px; height:50px;' readonly='readonly')
+      p
+      input#ajax_post(type = 'button' value='제출하기' class='ajaxsend')
+      p
+      script.
+        document.querySelector('.ajaxsend').addEventListener('click',function(){
+          sendAjax('http://localhost:3000/form_receive',code.value);
+        })
+        function sendAjax(url,data,language){
+          var data = {'code': data};
+          data = JSON.stringify(data);
+          var xhr = new XMLHttpRequest();
+        xhr.open('POST',url,true);
+            xhr.setRequestHeader('Content-type','application/json');
+            xhr.send(data);
 
-          xhr.addEventListener('load',function() {
-            var result = JSON.parse(xhr.responseText);
-            if(result.result !='ok')return;
-            document.getElementById('output').value=result.output;
-          });
-        }
-    p
+            xhr.addEventListener('load',function() {
+              var result = JSON.parse(xhr.responseText);
+              if(result.result !='ok')return;
+              document.getElementById('output').value=result.output;
+            });
+          }
+      p
