--- a/css/algorithm.css
+++ b/css/algorithm.css
@@ -1,7 +1,19 @@
 #algorithm_page {
-  width: 50%;
+  width: 100%;
   height: 100%;
   margin: 10px;
   padding: 10px;
   background-color: #ffffb7;
+}
+
+a.algorithmMenu {
+  vertical-align: bottom;
+  text-decoration: none;
+  font-family: serif;
+}
+
+a.algorithmMenu:link,
+a.algorithmMenu:visited,
+a.algorithmMenu:hover {
+  color: black;
 }
