--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,9 @@ body {
 }
 
 #content {
+  white-space: nowrap;
   width: 100%;
-  height : 100%;
+  height: 100%;
+  overflow: visible;
   display: inline-flex;
 }
