--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -10,5 +10,5 @@ html(lang='en')
       #content
         iframe(src='/algorithm')#algorithm_iframe
           include algorithm_page.pug
-        iframe(src='/ps')#ps_iframe
+        //-iframe(src='/ps')#ps_iframe
           include ps.pug
