--- a/src/views/algorithm_page_top.pug
+++ b/src/views/algorithm_page_top.pug
@@ -5,6 +5,7 @@ html
       $(document).ready(function(){
         var stack = []
         var sp = 0
+        var algorithmName = !{JSON.stringify(algorithmName)}
         $('.algorithmMenu').click(function(e){
           stack[sp++] = e.target.id
         })
@@ -12,13 +13,29 @@ html
             
             window.location.href()
         })
+        $('#algorithm_create').click(function(){
+          console.log(algorithmName)
+          $('.hidden').val(algorithmName)
+        })
       })
   body
     #algorithm_top
       -if(type=='main') {
-        h1 Welcome to Algorithm
+        h1#a Welcome to Algorithm
       -} else {
         h1 Hi! #{algorithmName}
       -}
       a#algorithm_prev.algorithmBtn(href='#') Prev
       a#algorithm_next.algorithmBtn(href='#') Next
+      form#algorithm_create(method='get' action=`/algorithm/create`)
+        input.hidden(type='hidden' name='parent')
+        input(type='submit' value='createList')
+      form#algorithm_create(method='get' action=`/algorithm/create`)
+        input.hidden(type='hidden' name='parent')
+        input(type='submit' value='createContent')
+      form#algorithm_modify(method='get' action=`/algorithm/modify`)
+        input.hidden(type='hidden' name='parent')
+        input(type='submit' value='modify')
+      form#algorithm_delete(method='get' action=`/algorithm/delete`)
+        input.hidden(type='hidden' name='parent')
+        input(type='submit' value='delete')
