--- a/css/main.css
+++ b/css/main.css
@@ -29,13 +29,13 @@ body {
   display: inline-flex;
 }
 
-#algorithm_iframe {
+#algorithm {
   border: 1px solid black;
   white-space: nowrap;
   width:100%;
   height:100%;
 }
-#ps_iframe {
+#ps {
   border: 1px solid black;
   white-space: nowrap;
   width:100%;
