--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -10,5 +10,5 @@ html(lang='en')
       #content
         #algorithm
           include ./algorithm/main.pug
-        //- #ps
-        //- include ps.pug
+        #ps
+          include ps.pug
