--- a/css/algorithm.css
+++ b/css/algorithm.css
@@ -1,41 +1,13 @@
-
 #algorithm_page {
   margin: 10px;
   padding: 10px;
   background-color: #ffffb7;
 }
-#algorithm_top {
-  white-space: nowrap;
-  display: flex;
-  justify-content: center;
-}
-a.algorithmMenu {
-  vertical-align: bottom;
-  text-decoration: none;
-  font-family: serif;
-}
 
-a.algorithmMenu:link,
-a.algorithmMenu:visited,
-a.algorithmMenu:hover {
-  color: black;
-}
 
-a.algorithmBtn:link,
-a.algorithmBtn:visited,
-a.algorithmBtn:hover {
-  color: black;
+#algorithm_content_list{
+  background-color: #ffaaaa;
 }
-
-a.algorithmBtn {
-  text-align: center;
-  vertical-align: bottom;
-  width: auto;
-  height: 50px;
-  margin-left: 50px;
-  padding: 10px;
-  border: 1px solid black;
-  background-color: white;
-  text-decoration: none;
-  font-family: serif;
+#algorithm_content{
+  background-color: #bbaaa2;
 }
