--- a/css/main.css
+++ b/css/main.css
@@ -32,12 +32,14 @@ body {
 #algorithm {
   border: 1px solid black;
   white-space: nowrap;
-  width:100%;
-  height:100%;
+  width: 50%;
+  height: 100%;
 }
+
 #ps {
+  padding: 10px;
   border: 1px solid black;
   white-space: nowrap;
-  width:100%;
-  height:100%;
+  width: 50%;
+  height: 100%;
 }
