problem solving 구현 시작, 파일 다운로드 방법 생각 중

--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -11,4 +11,4 @@ html(lang='en')
         #algorithm
           include ./algorithm/main.pug
         #ps
-          include ps.pug
+          include ./ps/main.pug
