--- a/css/main.css
+++ b/css/main.css
@@ -32,14 +32,15 @@ body {
 #algorithm {
   border: 1px solid black;
   white-space: nowrap;
-  width: 50%;
+  width: 100%;
   height: 100%;
+  display: none;
 }
 
 #ps {
   padding: 10px;
   border: 1px solid black;
   white-space: nowrap;
-  width: 50%;
+  width: 100%;
   height: 100%;
 }
