--- a/css/top.css
+++ b/css/top.css
@@ -8,7 +8,16 @@
 #top_page_list {
   display: inline-block;
 }
-
+h1 > a:link,
+h1 > a:visited,
+h1 > a:hover {
+  color: black;
+}
+h1 > a{
+  text-decoration: none;
+  border: 1px solid black;
+  padding: 11px;
+}
 a.menu {
   vertical-align: bottom;
   background-color: white;
