--- a/src/views/top.pug
+++ b/src/views/top.pug
@@ -20,7 +20,8 @@ html
   body
     #top
       #top_banner
-        h1 WELCOME TO CORDERS
+        h1
+          a(href='/') WELCOME TO CORDERS
       #top_page_list
         a#algorithm_btn.menu Algorithm
         a#ps_btn.menu Problem Solving
