--- a/src/views/ps/content.pug
+++ b/src/views/ps/content.pug
@@ -8,4 +8,4 @@ html
       h1#ps_main_banner 메인 페이지 입니다.
       
       img(src='/public/ps_main_picture.jpg' width='500px' height='300px')
-      #ps_content_content 코더스에 오신것을 환영합니다.
+      h1#ps_content_content 코더스에 오신것을 환영합니다.
