--- a/src/views/ps/problem/submit.pug
+++ b/src/views/ps/problem/submit.pug
@@ -2,7 +2,6 @@ doctype html
 html(lang='en')
   head
     style
-      include ./../../../../css/ps/problem/problem.css
       include ./../../../../css/ps/ps.css
       include ./../../../../css/main.css
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js")
@@ -15,4 +14,4 @@ html(lang='en')
         #ps
           #ps_page
             include ./../left.pug
-            include problem_content.pug
+            include submit_content.pug
