--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,8 @@
 }
 
 html, body {
-  width: 100%;
-  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
   margin: 0;
   padding: 0;
 }
@@ -16,8 +16,8 @@ body {
 }
 
 #main_page {
-  width: 100%;
-  height: 100%;
+  width: 1900px;
+  height: 1080px;
 }
 
 #content {
