--- a/src/views/ps/rank/rank.pug
+++ b/src/views/ps/rank/rank.pug
@@ -2,7 +2,6 @@ doctype html
 html(lang='en')
   head
     style
-      include ./../../../../css/ps/rank/rank.css
       include ./../../../../css/ps/ps.css
       include ./../../../../css/main.css
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js")
@@ -15,4 +14,5 @@ html(lang='en')
         #ps
           #ps_page
             include ./../left.pug
-            include rank_content.pug
+            #ps_content
+              include rank_content.pug
