--- a/src/views/ps/score/score.pug
+++ b/src/views/ps/score/score.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang='en')
   head
     style
+      include ./../../../../css/ps/score/score.css
       include ./../../../../css/ps/ps.css
       include ./../../../../css/main.css
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js")
@@ -14,4 +15,5 @@ html(lang='en')
         #ps
           #ps_page
             include ./../left.pug
-            include notice_content.pug
+            #ps_content
+              include score_content.pug
