레퍼런스 뒤로가기 앞으로가기 구현 및 색깔 조정, flag 부분  이상하게 안됨

--- a/src/views/algorithm/list.pug
+++ b/src/views/algorithm/list.pug
@@ -2,38 +2,30 @@ doctype html
 html
   head
     script(type='text/javascript').
-      $(document).ready(function(){
-        var algorithmName_ko = !{JSON.stringify(algorithmName_ko)}
-        var algorithm_list = !{JSON.stringify(algorithm_list)}
-        $(".algorithmMenu").click(function(e){
-          e.preventDefault();
-          sendAjax(`/algorithm/${e.target.id}`, e.target.id);
-        })
-        function sendAjax(url, e){
-          var data = {
-            algorithmName: e,
-            algorithmName_ko : algorithm_list[e].ko,
-            algorithm_list: algorithm_list[e],
-          }
-          data = JSON.stringify(data)
-          var xhr = new XMLHttpRequest()
-          xhr.open('POST', url, true)
-          xhr.setRequestHeader('Content-type', 'application/json')
-          xhr.send(data)
-          
-          xhr.addEventListener('load', function(){
-            var result = xhr.responseText
-            result = JSON.parse(result)
-            var arr = document.querySelectorAll('#content > script')
-            for (let i = 0; i < arr.length; i++) arr[i].outerHTML = ''
-            document.querySelector('#algorithm_page').outerHTML = result
-            arr = document.getElementsByTagName('script')
-            for (let i = 0; i < arr.length; i++) {
-              eval(arr[i].innerHTML) //run script inside div
-            }
-          })
-        }
+      $(document).on('click', '.algorithmMenu', function(e){
+        sendAjax('/algorithm/path', e.target.id);
       })
+      function sendAjax(url, path){
+        console.log("전송중")
+        data = JSON.stringify({
+          path : path
+        })
+        var xhr = new XMLHttpRequest()
+        xhr.open('POST', url, true)
+        xhr.setRequestHeader('Content-type', 'application/json')
+        xhr.send(data)
+    
+        xhr.addEventListener('load', function(){
+          var result = JSON.parse(xhr.responseText)
+          var algorithm_page = document.querySelector('#algorithm')
+          algorithm_page.innerHTML = result.render
+        })
+      }
   body
     #algorithm_content_list
-      p!= algorithm_content_list
+      -if(sub) {
+        ol
+          -for (let i in sub) {
+            li.algorithmMenu(id=sub[i].tableName)= sub[i].name
+          -}  
+      -}
