--- a/css/algorithm/algorithm.css
+++ b/css/algorithm/algorithm.css
@@ -1,3 +1,20 @@
+#algorithm_page {
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  /* background-color: #ffffb7; */
+  background-color: #6578b3;
+}
+
+#algorithm_content_list {
+  background-color: #ffaaaa;
+}
+
+#algorithm_content {
+  background-color: #f7f7ff;
+  /* background-color: #bbaaa2; */
+}
+
 /* 여기부터 algorithm top */
 .algorithm_top_Btn {
   vertical-align: bottom;
@@ -34,7 +51,13 @@
   justify-content: space-between;
 }
 
+#algorithm_top_left {
+  width: 70%;
+}
+
 #backfront_page {
+  margin-top: 20px;
+  text-align: left;
   width: 100%;
 }
 
@@ -43,13 +66,17 @@
 }
 
 #algorithm_top_function {
-  width: 100%;
+  width: 30%;
   align-content: center;
   display: block;
 }
 
 #algorithm_top_form {
   display: block;
+}
+
+#algorithm_title {
+  color: white;
 }
 
 #algorithm_top_radio {
@@ -68,16 +95,17 @@
   border: 1px solid black;
 }
 
-a.algorithmMenu {
-  margin-bottom: 50px;
+.algorithmMenu {
+  cursor: pointer;
+  margin-bottom: 20px;
   vertical-align: bottom;
   text-decoration: none;
   font-family: serif;
 }
 
-a.algorithmMenu:link,
-a.algorithmMenu:visited,
-a.algorithmMenu:hover {
+.algorithmMenu:link,
+.algorithmMenu:visited,
+.algorithmMenu:hover {
   color: black;
 }
 
