--- a/css/top.css
+++ b/css/top.css
@@ -32,6 +32,7 @@ a.menu {
   height: 50px;
   margin: 10px;
   padding: 10px;
+  margin-right:50px;
   text-decoration: none;
   border: 1px solid black;
 }
